replace var(--white) by $white

--- a/templates/cassiopeia/scss/blocks/_footer.scss
+++ b/templates/cassiopeia/scss/blocks/_footer.scss
@@ -16,7 +16,7 @@
     height: 40px;
     padding: $cassiopeia-grid-gutter/2;
     color: var(--cassiopeia-color-primary);
-    background: color("white");
+    background: $white;
     border-radius: $border-radius;
 
     @include margin("right", 5px);
