Correct margin of toggler for RTL

--- a/templates/cassiopeia/scss/template-rtl.scss
+++ b/templates/cassiopeia/scss/template-rtl.scss
@@ -40,6 +40,11 @@ dd {
   padding-right: 0;
 }
 
+.metismenu .mm-toggler {
+  margin-right: .5em;
+  margin-left: 0;
+}
+
 .mr-2 {
   margin-right: 0 !important;
   margin-left: .5rem;
