Improve the specificity of the css for RTL

--- a/templates/cassiopeia/scss/template-rtl.scss
+++ b/templates/cassiopeia/scss/template-rtl.scss
@@ -40,7 +40,7 @@ dd {
   padding-right: 0;
 }
 
-.metismenu .mm-toggler {
+.metismenu.mod-menu .mm-toggler {
   margin-right: .5em;
   margin-left: 0;
 }
