--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -70,6 +70,7 @@
       display: flex;
       flex: 1 1 0%;
       flex-direction: row;
+      margin-right: $cassiopeia-grid-gutter;
     }
 
     > li {
