--- a/templates/cassiopeia/scss/template-rtl.scss
+++ b/templates/cassiopeia/scss/template-rtl.scss
@@ -45,6 +45,18 @@ dd {
   margin-left: 0;
 }
 
+.container-header .mod-menu {
+
+  @include media-breakpoint-up(md) {
+    margin-right: 0;
+    margin-left: $cassiopeia-grid-gutter;
+  }
+
+  > li {
+    margin-left: 1.55em;
+  }
+}
+
 .mr-2 {
   margin-right: 0 !important;
   margin-left: .5rem;
