Correct logic and layout RTL and only-child

--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -62,6 +62,10 @@
         margin-top: $cassiopeia-grid-gutter;
       }
     }
+
+    .container-search:only-child {
+      margin-left: auto;
+    }
   }
 
   .navbar-collapse {
