--- a/templates/cassiopeia/scss/template-rtl.scss
+++ b/templates/cassiopeia/scss/template-rtl.scss
@@ -46,6 +46,8 @@ dd {
 }
 
 .container-header {
+  background-image: $cassiopeia-header-grad-rtl;
+
   .container-nav .container-search:only-child {
     margin-right: auto;
     margin-left: 0;
@@ -113,4 +115,8 @@ dd {
 .btn-group > .btn:not(:first-child),
 .btn-group > .btn-group:not(:first-child) {
   @include border-right-radius(0);
+}
+
+.footer {
+  background-image: $cassiopeia-header-grad-rtl;
 }
