--- a/administrator/templates/atum/scss/template-rtl.scss
+++ b/administrator/templates/atum/scss/template-rtl.scss
@@ -30,8 +30,7 @@ ul {
 
 // Header
 .header {
-  .page-title [class^="icon-"],
-  .page-title [class^="fa-"] {
+  .page-title [class^="icon-"] {
     margin-right: 0;
     margin-left: 15px;
   }
