--- a/administrator/templates/atum/scss/blocks/_quickicons.scss
+++ b/administrator/templates/atum/scss/blocks/_quickicons.scss
@@ -14,9 +14,8 @@
     text-decoration: none;
     transition: all .25s ease;
 
-
-    .fas,
-    .fab {
+    [class^="icon-"],
+    [class*=" icon-"] {
       margin: 0 auto;
       font-size: $quickicon-icon-size;
       color: transparent;
@@ -34,8 +33,8 @@
       text-decoration: none;
       background: var(--atum-link-color);
 
-      .fas,
-      .fab {
+      [class^="icon-"],
+      [class*=" icon-"] {
         color: transparent;
         background: linear-gradient(var(--atum-bg-light), $white);
         background-clip: text;
@@ -141,9 +140,11 @@
       &.quickicon-icon {
         margin: .8rem auto 0;
 
-        &.big .fas,
-        &.big .fab {
-          font-size: $quickicon-icon-size-big;
+        &.big {
+          [class^="icon-"],
+          [class*=" icon-"] {
+            font-size: $quickicon-icon-size-big;
+          }
         }
       }
     }
@@ -159,7 +160,7 @@
       font-size: $display1-size;
       font-weight: $bold-weight;
 
-      > .fa-spinner {
+      > .icon-spinner {
         font-size: $display1-size;
       }
     }
@@ -176,8 +177,8 @@
       background: var(--danger);
       border: 1px solid lighten($danger-txt, 30%);
 
-      .fas,
-      .fab {
+      [class^="icon-"],
+      [class*=" icon-"] {
         color: $danger-txt;
       }
 
@@ -185,9 +186,11 @@
         color: var(--white);
         background: var(--danger);
 
-        .fas::before,
-        .fab::before {
-          color: var(--white);
+        [class^="icon-"],
+        [class*=" icon-"] {
+          &::before {
+            color: var(--white);
+          }
         }
       }
     }
@@ -196,8 +199,8 @@
       color: var(--success);
       border: 1px solid lighten($success-txt, 20%);
 
-      .fas,
-      .fab {
+      [class^="icon-"],
+      [class*=" icon-"] {
         color: transparent;
         background: linear-gradient(var(--success), #159c1e);
         background-clip: text;
@@ -207,11 +210,13 @@
         color: var(--white);
         background: var(--success);
 
-        .fas::before,
-        .fab::before {
-          color: transparent;
-          background: linear-gradient($white, lighten($green, 40%));
-          background-clip: text;
+        [class^="icon-"],
+        [class*=" icon-"] {
+          &::before {
+            color: transparent;
+            background: linear-gradient($white, lighten($green, 40%));
+            background-clip: text;
+          }
         }
       }
     }
