--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -87,7 +87,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    [class^="icon-"],
+    [class^="#{$fa-css-prefix}-"],
     [class^="fa-"] {
       margin-inline-end: .625rem;
       font-size: 1rem;
@@ -176,8 +176,8 @@
     }
   }
 
-  [class^="icon-"],
-  [class*=" icon-"] {
+  [class^="#{$fa-css-prefix}-"],
+  [class*=" #{$fa-css-prefix}-"] {
     font-size: 1.5rem;
     vertical-align: middle;
     transition: all .2s ease-in-out;
@@ -198,7 +198,7 @@
     }
   }
 
-  .icon-angle-down {
+  .#{$fa-css-prefix}-angle-down {
     position: absolute;
     top: .9rem;
 
@@ -238,8 +238,8 @@
         text-align: right;
       }
 
-      [class^="icon-"],
-      [class*=" icon-"] {
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         [dir=ltr] & {
           margin-right: $dropdown-item-padding-x;
         }
@@ -259,8 +259,8 @@
       text-align: right;
     }
 
-    [class^="icon-"],
-    [class*=" icon-"] {
+    [class^="#{$fa-css-prefix}-"],
+    [class*=" #{$fa-css-prefix}-"] {
       [dir=ltr] & {
         margin-right: $dropdown-item-padding-x;
       }
@@ -329,8 +329,8 @@
       background-color: var(--atum-bg-dark);
       border: 0;
 
-      [class^="icon-"],
-      [class*=" icon-"] {
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         margin: auto;
       }
 
@@ -408,7 +408,7 @@
       }
     }
 
-    .icon-angle-down {
+    .#{$fa-css-prefix}-angle-down {
       transform: rotate(180deg);
     }
   }
