--- a/administrator/templates/atum/scss/blocks/_quickicons.scss
+++ b/administrator/templates/atum/scss/blocks/_quickicons.scss
@@ -14,8 +14,8 @@
     text-decoration: none;
     transition: all .25s ease;
 
-    [class^="icon-"],
-    [class*=" icon-"] {
+    [class^="#{$fa-css-prefix}-"],
+    [class*=" #{$fa-css-prefix}-"] {
       margin: 0 auto;
       font-size: $quickicon-icon-size;
       color: transparent;
@@ -33,8 +33,8 @@
       text-decoration: none;
       background: var(--atum-link-color);
 
-      [class^="icon-"],
-      [class*=" icon-"] {
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         color: transparent;
         background: linear-gradient(var(--atum-bg-light), $white);
         background-clip: text;
@@ -141,8 +141,8 @@
         margin: .8rem auto 0;
 
         &.big {
-          [class^="icon-"],
-          [class*=" icon-"] {
+          [class^="#{$fa-css-prefix}-"],
+          [class*=" #{$fa-css-prefix}-"] {
             font-size: $quickicon-icon-size-big;
           }
         }
@@ -160,7 +160,7 @@
       font-size: $display1-size;
       font-weight: $bold-weight;
 
-      > .icon-spinner {
+      > .#{$fa-css-prefix}-spinner {
         font-size: $display1-size;
       }
     }
@@ -177,8 +177,8 @@
       background: var(--danger);
       border: 1px solid lighten($danger-txt, 30%);
 
-      [class^="icon-"],
-      [class*=" icon-"] {
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         color: $danger-txt;
       }
 
@@ -186,8 +186,8 @@
         color: var(--white);
         background: var(--danger);
 
-        [class^="icon-"],
-        [class*=" icon-"] {
+        [class^="#{$fa-css-prefix}-"],
+        [class*=" #{$fa-css-prefix}-"] {
           &::before {
             color: var(--white);
           }
@@ -199,8 +199,8 @@
       color: var(--success);
       border: 1px solid lighten($success-txt, 20%);
 
-      [class^="icon-"],
-      [class*=" icon-"] {
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         color: transparent;
         background: linear-gradient(var(--success), #159c1e);
         background-clip: text;
@@ -210,8 +210,8 @@
         color: var(--white);
         background: var(--success);
 
-        [class^="icon-"],
-        [class*=" icon-"] {
+        [class^="#{$fa-css-prefix}-"],
+        [class*=" #{$fa-css-prefix}-"] {
           &::before {
             color: transparent;
             background: linear-gradient($white, lighten($green, 40%));
