--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -33,8 +33,8 @@
       min-height: 44px;
       font-size: .9rem;
 
-      [class^="icon-"],
-      [class*=" icon-"] {
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         margin: 0 .85rem;
         transform: scale(1.3);
       }
