--- a/administrator/templates/atum/scss/pages/_com_cpanel.scss
+++ b/administrator/templates/atum/scss/pages/_com_cpanel.scss
@@ -138,8 +138,8 @@
 
       .cpanel-add-module-icon {
 
-        [class^="icon-"],
-        [class*=" icon-"] {
+        [class^="#{$fa-css-prefix}-"],
+        [class*=" #{$fa-css-prefix}-"] {
           opacity: .3;
         }
       }
@@ -156,8 +156,8 @@
       bottom: 0;
       left: 12rem;
 
-      [class^="icon-"],
-      [class*=" icon-"] {
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         font-size: 7rem;
         transition: all .3s ease-in;
         transform: translateX(-100%);
@@ -172,8 +172,8 @@
   }
 
   .list-group-item a > span {
-    &[class^="icon-"],
-    &[class*=" icon-"] {
+    &[class^="#{$fa-css-prefix}-"],
+    &[class*=" #{$fa-css-prefix}-"] {
       display: block;
       padding: .5rem;
       color: rgba(255, 255, 255, .9);
@@ -187,8 +187,8 @@
   }
 
   .list-group-item a > span.home-image {
-    &[class^="icon-"],
-    &[class*=" icon-"] {
+    &[class^="#{$fa-css-prefix}-"],
+    &[class*=" #{$fa-css-prefix}-"] {
       display: inline-block;
       padding: 0;
       font-size: .9rem;
