move font-family from pseudo to element itself

--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -87,10 +87,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    [class^="#{$fa-css-prefix}-"],
-    [class^="fa-"] {
+    [class^="#{$fa-css-prefix}-"] {
       margin-inline-end: .625rem;
-      font-size: 1rem;
     }
   }
 
