Several improvements to solve issues
. Remove display:grid for top and bottom positions
. Move rtl definition for footer to _footer.scss ([dir=rtl] & )
. Add margin to form control-group
. Add underline for links without class (e.g. in text)
. Change padding and position for mod-list on sidebar
. Improve links in mod-menu on sidebar

--- a/templates/cassiopeia/scss/blocks/_footer.scss
+++ b/templates/cassiopeia/scss/blocks/_footer.scss
@@ -23,4 +23,13 @@
     background: $white;
     border-radius: $border-radius;
   }
+
+  [dir=rtl] & {
+    background-image: $cassiopeia-header-grad-rtl;
+
+    .back-top {
+      margin-right: auto;
+      margin-left: 0;
+    }
+  }
 }
