fix icons in installation

--- a/installation/template/scss/template-rtl.scss
+++ b/installation/template/scss/template-rtl.scss
@@ -70,11 +70,12 @@ textarea.noResize {
   text-align: left;
 }
 
-.fa-chevron-right::before {
+.#{$fa-css-prefix}-chevron-right::before {
   content: "";
 }
 
-.j-install-last-step .fas {
+.j-install-last-step [class^="icon-"],
+.j-install-last-step [class*=" icon-"] {
   display: inline;
 }
 
