--- a/installation/template/scss/template.scss
+++ b/installation/template/scss/template.scss
@@ -207,8 +207,16 @@ caption {
 
 [class^="icon-"],
 [class*=" icon-"] {
+  display: inline-block;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
   font-family: "Font Awesome 5 Free";
-  cursor: pointer;
+  speak: none;
+  font-style: normal;
+  font-weight: 900;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
 }
 
 .#{$fa-css-prefix}-eye-open,
