--- a/templates/cassiopeia/scss/blocks/_modifiers.scss
+++ b/templates/cassiopeia/scss/blocks/_modifiers.scss
@@ -1,5 +1,11 @@
 // Modifiers
 
+// error page
+
+.error_site {
+  height: 100vh;
+}
+
 // com_modules
 [class^="container-"],
 [class*=" container-"] {
