extend to work with 'fas fa-' icons too. Introduction of $jicon-css-prefix next to $fa-css-prefix

--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -125,7 +125,8 @@ $content-font-size:                .875rem;
 $label-font-size:                  1rem;
 $danger-bg:                        #900;
 $badge-font-size:                  .75rem;
-$fa-css-prefix:                    icon;
+$jicon-css-prefix:                 icon;
+$fa-css-prefix:                    fa;
 $fa-font-path:                     "../../../../media/vendor/fontawesome-free/webfonts";
 $roboto-font-path:                 "../../../../media/vendor/roboto-fontface/fonts";
 
