--- a/templates/cassiopeia/scss/_variables.scss
+++ b/templates/cassiopeia/scss/_variables.scss
@@ -87,6 +87,8 @@ $h4-font-size:                       1rem;
 $h5-font-size:                       .9286rem;
 $h6-font-size:                       .8571rem;
 $font-size-sm:                       .8rem;
+$jicon-css-prefix:                   icon;
+$fa-css-prefix:                      fa;
 $fa-font-path:                       "../../../media/vendor/fontawesome-free/webfonts";
 
 // Border Radius
