--- a/administrator/templates/atum/scss/blocks/_quickicons.scss
+++ b/administrator/templates/atum/scss/blocks/_quickicons.scss
@@ -14,6 +14,8 @@
     text-decoration: none;
     transition: all .25s ease;
 
+    [class^="#{$jicon-css-prefix}-"],
+    [class*=" #{$jicon-css-prefix}-"],
     [class^="#{$fa-css-prefix}-"],
     [class*=" #{$fa-css-prefix}-"] {
       margin: 0 auto;
@@ -33,6 +35,8 @@
       text-decoration: none;
       background: var(--atum-link-color);
 
+      [class^="#{$jicon-css-prefix}-"],
+      [class*=" #{$jicon-css-prefix}-"],
       [class^="#{$fa-css-prefix}-"],
       [class*=" #{$fa-css-prefix}-"] {
         color: transparent;
@@ -141,6 +145,8 @@
         margin: .8rem auto 0;
 
         &.big {
+          [class^="#{$jicon-css-prefix}-"],
+          [class*=" #{$jicon-css-prefix}-"],
           [class^="#{$fa-css-prefix}-"],
           [class*=" #{$fa-css-prefix}-"] {
             font-size: $quickicon-icon-size-big;
@@ -160,6 +166,7 @@
       font-size: $display1-size;
       font-weight: $bold-weight;
 
+      > .#{$jicon-css-prefix}-spinner,
       > .#{$fa-css-prefix}-spinner {
         font-size: $display1-size;
       }
@@ -177,6 +184,8 @@
       background: var(--danger);
       border: 1px solid lighten($danger-txt, 30%);
 
+      [class^="#{$jicon-css-prefix}-"],
+      [class*=" #{$jicon-css-prefix}-"],
       [class^="#{$fa-css-prefix}-"],
       [class*=" #{$fa-css-prefix}-"] {
         color: $danger-txt;
@@ -186,6 +195,8 @@
         color: var(--white);
         background: var(--danger);
 
+        [class^="#{$jicon-css-prefix}-"]::before,
+        [class*=" #{$jicon-css-prefix}-"]::before,
         [class^="#{$fa-css-prefix}-"]::before,
         [class*=" #{$fa-css-prefix}-"]::before {
           color: var(--white);
@@ -197,6 +208,8 @@
       color: var(--success);
       border: 1px solid lighten($success-txt, 20%);
 
+      [class^="#{$jicon-css-prefix}-"],
+      [class*=" #{$jicon-css-prefix}-"],
       [class^="#{$fa-css-prefix}-"],
       [class*=" #{$fa-css-prefix}-"] {
         color: transparent;
@@ -208,6 +221,8 @@
         color: var(--white);
         background: var(--success);
 
+        [class^="#{$jicon-css-prefix}-"]::before,
+        [class*=" #{$jicon-css-prefix}-"]::before,
         [class^="#{$fa-css-prefix}-"]::before,
         [class*=" #{$fa-css-prefix}-"]::before {
           color: transparent;
