rest margin-bottom on direct children of fieldset

--- a/templates/cassiopeia/scss/blocks/_form.scss
+++ b/templates/cassiopeia/scss/blocks/_form.scss
@@ -112,6 +112,10 @@ fieldset {
   + fieldset {
     margin-top: $cassiopeia-grid-gutter*2;
   }
+  
+  > * {
+    margin-bottom: 0
+  }
 
   > * + * {
     margin-top: $cassiopeia-grid-gutter*2;
