--- a/templates/cassiopeia/scss/blocks/_form.scss
+++ b/templates/cassiopeia/scss/blocks/_form.scss
@@ -109,10 +109,11 @@ td .form-control {
 }
 
 fieldset {
+  margin-bottom: $cassiopeia-grid-gutter*2;
   + fieldset {
     margin-top: $cassiopeia-grid-gutter*2;
   }
-  
+
   > * {
     margin-bottom: 0
   }
@@ -122,6 +123,9 @@ fieldset {
   }
 }
 
+.control-group {
+  margin: $cassiopeia-grid-gutter 0;
+}
 .container-popup [id="filter[search]-desc"] {
   top: 100%;
   bottom: auto;
