fixing Joomla logo icon

--- a/installation/template/scss/template-rtl.scss
+++ b/installation/template/scss/template-rtl.scss
@@ -70,7 +70,8 @@ textarea.noResize {
   text-align: left;
 }
 
-.#{$fa-css-prefix}-chevron-right::before {
+.#{$jicon-css-prefix}-chevron-right::before,
+.#{$fa-css-prefix}-chevron-right::before{
   content: "";
 }
 
