--- a/installation/template/scss/template.scss
+++ b/installation/template/scss/template.scss
@@ -1,8 +1,19 @@
 // Variables
 @import "../../../administrator/templates/atum/scss/variables";
+$jicon-css-prefix: icon;
+$fa-css-prefix: fa;
+$fa-font-path: "../../../media/vendor/fontawesome-free/webfonts";
 
 // Font Awesome
 @import "../../../administrator/templates/atum/scss/vendor/fontawesome-free/fontawesome";
+
+// "Font Awesome 5 Free"
+@import "../../../media/vendor/fontawesome-free/scss/fontawesome";
+@import "../../../media/vendor/fontawesome-free/scss/solid";
+@import "../../../media/vendor/fontawesome-free/scss/brands";
+
+// B/C for Icomoon
+@import "../../../build/media_source/system/scss/icomoon";
 
 // Bootstrap
 @import "../../../media/vendor/bootstrap/scss/bootstrap";
