fix margin top on first element in sidebar left

--- a/templates/cassiopeia/scss/blocks/_css-grid.scss
+++ b/templates/cassiopeia/scss/blocks/_css-grid.scss
@@ -99,6 +99,9 @@
 
 .container-sidebar-left {
   grid-area: side-l;
+  .sidebar-left:first-child {
+    margin-top: $cassiopeia-grid-gutter;
+  }
 }
 
 .container-sidebar-right {
