--- a/templates/cassiopeia/scss/global/fonts-local_roboto.scss
+++ b/templates/cassiopeia/scss/global/fonts-local_roboto.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import "../../../media/vendor/roboto-fontface/scss/roboto/roboto-fontface.css";
+@import "../../../../media/vendor/roboto-fontface/scss/roboto/roboto-fontface.css";
 
 :root {
   --cassiopeia-font-family-body: "Roboto", sans-serif;
