fix border radius on first and last item

--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -86,12 +86,12 @@ meter {
 .page-item {
   &:first-child {
     .page-link {
-      @include border-radius($border-radius);
+      @include border-radius($border-radius 0 0 $border-radius);
     }
   }
   &:last-child {
     .page-link {
-      @include border-radius($border-radius);
+      @include border-radius(0 $border-radius $border-radius 0);
     }
   }
 }
