--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -124,8 +124,8 @@ $content-font-size:                .875rem;
 $label-font-size:                  1rem;
 $danger-bg:                        #900;
 $badge-font-size:                  .75rem;
-$jicon-css-prefix:                 icon;
-$fa-css-prefix:                    fa;
+$jicon-css-prefix:                 icon !default;
+$fa-css-prefix:                    fa !default;
 $fa-font-path:                     "../../../../media/vendor/fontawesome-free/webfonts";
 $roboto-font-path:                 "../../../../media/vendor/roboto-fontface/fonts";
 
