Change rules for active and hover menu items (#143)
Changed the rules for active and hover menu items in mobile view and in menus outside header position.

--- a/templates/cassiopeia/scss/blocks/_modifiers.scss
+++ b/templates/cassiopeia/scss/blocks/_modifiers.scss
@@ -294,20 +294,25 @@
   }
 }
 
-.mod-menu.nav {
-  li {
-    padding: ($cassiopeia-grid-gutter/2) 0;
+:not(.container-header) {
+  .mod-menu.nav {
+    li {
+      padding: ($cassiopeia-grid-gutter/2) 0;
 
-    a {
-      text-decoration: none;
-    }
+      a {
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
 
-    &.active > a {
-      text-decoration: underline;
-    }
+      &.active > a {
+        text-decoration: underline;
+      }
 
-    .mod-menu__sub {
-      padding-left: $cassiopeia-grid-gutter;
+      .mod-menu__sub {
+        padding-left: $cassiopeia-grid-gutter;
+      }
     }
   }
 }
