--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -128,6 +128,15 @@
         left: 0;
         background: $white;
       }
+
+      @include media-breakpoint-down(md) {
+        &.active > a,
+        &.active > span,
+        > a:hover,
+        > span:hover {
+          text-decoration: underline;
+        }
+      }
     }
 
     .parent {
