fixes fa-spin(s)

--- a/administrator/templates/atum/scss/blocks/_quickicons.scss
+++ b/administrator/templates/atum/scss/blocks/_quickicons.scss
@@ -159,7 +159,8 @@
       font-size: $display1-size;
       font-weight: $bold-weight;
 
-      > .fa-spinner {
+      > .fa-spinner,
+        .icon-spinner {
         font-size: $display1-size;
       }
     }
