Remove *.* selector from _forms.scss (#151)
Fix compact tagged items buttons' heights.

--- a/templates/cassiopeia/scss/blocks/_form.scss
+++ b/templates/cassiopeia/scss/blocks/_form.scss
@@ -115,11 +115,7 @@ fieldset {
   }
 
   > * {
-    margin-bottom: 0
-  }
-
-  > * + * {
-    margin-top: $cassiopeia-grid-gutter*2;
+    margin-bottom: 0;
   }
 }
 
