Another style for captions
Small font, light gray and more space between image and intro text

--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -64,6 +64,15 @@ th dd {
   font-weight: normal;
 }
 
+figure {
+  margin: 0 0 ($cassiopeia-grid-gutter*2);
+}
+
+figcaption {
+  font-size: .9em;
+  color: $gray-600;
+}
+
 .mod-menu {
   flex-direction: column;
 }
