--- a/templates/cassiopeia/scss/blocks/_modifiers.scss
+++ b/templates/cassiopeia/scss/blocks/_modifiers.scss
@@ -294,24 +294,38 @@
   }
 }
 
-:not(.container-header) {
+.mod-menu.nav {
+  li {
+    padding: ($cassiopeia-grid-gutter/2) 0;
+
+    a {
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    &.active > a {
+      text-decoration: underline;
+    }
+
+    .mod-menu__sub {
+      padding-left: $cassiopeia-grid-gutter;
+    }
+  }
+}
+
+.container-header {
   .mod-menu.nav {
     li {
-      padding: ($cassiopeia-grid-gutter/2) 0;
-
       a {
-        text-decoration: none;
         &:hover {
-          text-decoration: underline;
+          text-decoration: none;
         }
       }
 
       &.active > a {
-        text-decoration: underline;
-      }
-
-      .mod-menu__sub {
-        padding-left: $cassiopeia-grid-gutter;
+        text-decoration: none;
       }
     }
   }
