Set font scheme "None" as default, fix missing values for css variables

--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -19,8 +19,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--cassiopeia-font-family-headings);
-  font-weight: var(--cassiopeia-font-weight-headings);
+  font-family: var(--cassiopeia-font-family-headings, "Helvetica Neue", Helvetica, Arial, sans-serif);
+  font-weight: var(--cassiopeia-font-weight-headings, 700);
 }
 
 a {
