--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -19,7 +19,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--cassiopeia-font-family-headings, "Helvetica Neue", Helvetica, Arial, sans-serif);
+  font-family: var(--cassiopeia-font-family-headings, $font-family-sans-serif);
   font-weight: var(--cassiopeia-font-weight-headings, 700);
 }
 
