--- a/administrator/components/com_media/resources/styles/components/_media-modal.scss
+++ b/administrator/components/com_media/resources/styles/components/_media-modal.scss
@@ -60,8 +60,8 @@
 
 .media-preview-close {
   position: absolute;
-  top: 0;
-  right: 0;
+  bottom: 100%;
+  left: 100%;
   font-size: 2rem;
   color: inherit;
   background: none;
