--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -20,7 +20,7 @@ h4,
 h5,
 h6 {
   font-family: var(--cassiopeia-font-family-headings, $font-family-sans-serif);
-  font-weight: var(--cassiopeia-font-weight-headings, 700);
+  font-weight: var(--cassiopeia-font-weight-headings, $font-weight-bold);
 }
 
 a {
