move backToTop outside of footer and apply styling

--- a/templates/cassiopeia/scss/template.scss
+++ b/templates/cassiopeia/scss/template.scss
@@ -22,6 +22,7 @@
 // Blocks
 @import "blocks/global"; // Leave this first
 @import "blocks/alerts";
+@import "blocks/back-to-top";
 @import "blocks/banner";
 @import "blocks/footer";
 @import "blocks/form";
