--- a/plugins/editors/tinymce/forms/setoptions.xml
+++ b/plugins/editors/tinymce/forms/setoptions.xml
@@ -36,6 +36,17 @@
 	/>
 
 	<field
+		name="language"
+		type="radio"
+		label="PLG_TINY_FIELD_LANGUAGE_LABEL"
+		layout="joomla.form.field.radio.switcher"
+		default="1"
+		>
+		<option value="0">JOFF</option>
+		<option value="1">JON</option>
+	</field>
+
+	<field
 		name="drag_drop"
 		type="radio"
 		label="PLG_TINY_FIELD_DRAG_DROP_LABEL"
