--- a/templates/cassiopeia/scss/template.scss
+++ b/templates/cassiopeia/scss/template.scss
@@ -38,6 +38,7 @@
 @import "blocks/modals";
 @import "blocks/modifiers";
 @import "blocks/utilities";
+@import "blocks/legacy";
 @import "blocks/css-grid"; // Last to allow fallback
 
 // Vendor overrides
