silly icon code

--- a/administrator/templates/atum/scss/blocks/_icons.scss
+++ b/administrator/templates/atum/scss/blocks/_icons.scss
@@ -79,6 +79,11 @@
   content: "\f1aa";
 }
 
+.icon-accessible::before {
+  font-family: "Font Awesome 5 Brands";
+  content: "\f368";
+}
+
 .icon-shield-alt::before {
   content: "\f3ed";
 }
