Use --cassiopeia-color-link for links (#177)
Change color: var(--cassiopeia-color-primary); to color: var(--cassiopeia-color-link);
Colour for links is now hsl(220, 67%, 40%); to match to color-primary: hsl(220, 67%, 20%);

--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -28,7 +28,7 @@ h6 {
 }
 
 a {
-  color: var(--cassiopeia-color-primary);
+  color: var(--cassiopeia-color-link);
 
   &:not([class]) {
     text-decoration: underline;
