Added height control and v-scroll to com_admin sidebars

--- a/administrator/templates/atum/scss/blocks/_sidebar-nav.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar-nav.scss
@@ -5,6 +5,8 @@
   // override bootstrap important
   background: var(--atum-sidebar-bg) !important;
   box-shadow: $atum-box-shadow;
+  max-height: 75vh;
+  overflow-y:scroll;
 
   ul {
     padding-left: .5rem;
