wrap toolbar on overflow

--- a/administrator/components/com_media/resources/styles/components/_media-toolbar.scss
+++ b/administrator/components/com_media/resources/styles/components/_media-toolbar.scss
@@ -5,6 +5,7 @@
   background-color: $toolbar-bg;
   border-bottom: 1px solid $border-color;
   border-radius: $border-radius $border-radius 0 0;
+  flex-wrap: wrap;
   input {
     padding: .375rem .75rem;
     color: #495057;
