use default bootstrap tabs styling

--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -156,8 +156,8 @@ $dropdown-item-padding-x:          .75rem;
 $dropdown-spacer:                  0;
 
 // Tabs
-$nav-tabs-border-width:            0;
-$nav-tabs-link-active-bg:          rgba($gray-100, .2); // Used by bootstrap tabs
+//$nav-tabs-border-width:            1px;
+//$nav-tabs-link-active-bg:          var(--white); // Used by bootstrap tabs
 
 // Cards
 $card-border-width:                0;
