--- a/templates/cassiopeia/scss/blocks/_footer.scss
+++ b/templates/cassiopeia/scss/blocks/_footer.scss
@@ -7,6 +7,8 @@
   background-image: $cassiopeia-header-grad;
 
   .grid-child {
+    align-items: center;
+    justify-content: space-between;
     padding: 2.5rem ($cassiopeia-grid-gutter/2);
   }
 
