--- a/components/com_content/forms/article.xml
+++ b/components/com_content/forms/article.xml
@@ -248,15 +248,10 @@
 
 			<field
 				name="float_intro"
-				type="list"
-				label="COM_CONTENT_FLOAT_INTRO_LABEL"
-				useglobal="true"
-				validate="options"
-				>
-				<option value="right">COM_CONTENT_RIGHT</option>
-				<option value="left">COM_CONTENT_LEFT</option>
-				<option value="none">COM_CONTENT_NONE</option>
-			</field>
+				type="text"
+				label="COM_CONTENT_FIELD_IMAGE_CLASS_LABEL"
+				size="20"
+			/>
 		</fieldset>
 		<fieldset name="image-full">
 			<field
@@ -281,15 +276,10 @@
 
 			<field
 				name="float_fulltext"
-				type="list"
-				label="COM_CONTENT_FLOAT_FULLTEXT_LABEL"
-				useglobal="true"
-				validate="options"
-				>
-				<option value="right">COM_CONTENT_RIGHT</option>
-				<option value="left">COM_CONTENT_LEFT</option>
-				<option value="none">COM_CONTENT_NONE</option>
-			</field>
+				type="text"
+				label="COM_CONTENT_FIELD_IMAGE_CLASS_LABEL"
+				size="20"
+			/>
 		</fieldset>
 	</fields>
 	<fields name="urls">
