Add padding to definition list (single contact) (#178)
* Add padding to definition list (single contact)

* Fix CS: Remove obolete space

Co-authored-by: Richard Fath <richard67@users.noreply.github.com>

--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -62,6 +62,13 @@ small,
 
 dd {
   margin-bottom: 0;
+  padding: 0 0 0 ($cassiopeia-grid-gutter*2);
+}
+
+[dir="rtl"] dd {
+  padding: 0 ($cassiopeia-grid-gutter*2) 0 0;
+  margin-right: 0;
+  margin-left: auto;
 }
 
 th dd {
